[gd_scene load_steps=6 format=3 uid="uid://c8uqitgnsy5rf"]

[ext_resource type="Script" path="res://TTS/tts.gd" id="1_mokfj"]
[ext_resource type="AudioStream" uid="uid://xopmeul8ty6r" path="res://TTS/bip1.wav" id="2_u10t1"]
[ext_resource type="AudioStream" uid="uid://ckmu6wxd8spep" path="res://TTS/bip2.wav" id="3_lv4eq"]
[ext_resource type="AudioStream" uid="uid://bk7rl7ii5i3rh" path="res://TTS/bip3.wav" id="4_wv5fv"]
[ext_resource type="AudioStream" uid="uid://0w6hx2grkmh5" path="res://TTS/bip4.wav" id="5_eokvy"]

[node name="tts" type="Timer"]
wait_time = 0.15
script = ExtResource("1_mokfj")

[node name="bip1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_u10t1")

[node name="bip2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lv4eq")

[node name="bip3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wv5fv")

[node name="bip4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_eokvy")
